put insert and update into different functions
